# download-station-companion

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
.github/workflows/: release.yml  test.yml
src/: conf.rs  logger.rs  main.rs  structs.rs  task.rs  traits.rs
src/core/: mod.rs  task.rs  traits.rs
src/services/: discord.rs  download_station.rs  mod.rs  schemas.rs
