[package]
name = "ds-companion"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.9",  features = ["blocking", "json"]}
log = "0.4.22"
serde_json = "1.0.134"
dotenv = "0.15.0"
derive-new = "0.7.0"
chrono = "0.4.39"
serde = {version = "1.0.217", features = ["derive"] }
urlencoding = "2.1.3"
clap = { version = "4.5.23", features = ["derive", "env"] }
once_cell = "1.20.2"
regex = "1.11.1"

[dev-dependencies]


